fixed social icons on tablet and mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,6 +8,9 @@
     max-width: 480px;
     text-align: center;
   }
+
+  /* Items Removed from view */
+
   nav,
   .subscribe,
   .hidden-left,
@@ -21,6 +24,8 @@
   .gallery::after {
     display: none;
   }
+
+  /* Hover effects disabled */
 
   .sk8-1:hover,
   .sk8-2:hover,
@@ -46,6 +51,8 @@
     width: auto;
   }
 
+  /* Adding Section Titles */
+
   .Sk8t-news-flag::after {
     content: "SK8T NEWS";
     color: var(--white);
@@ -59,18 +66,6 @@
     font-size: 1.3rem;
     border-top: 1px solid var(--light-text-color);
     border-bottom: 1px solid var(--light-text-color);
-  }
-
-  section.articles {
-    grid-template-columns: 1fr;
-  }
-
-  section.articles {
-    margin-top: 30px;
-  }
-
-  .articles .info {
-    height: 250px;
   }
 
   .skateboarders-flag::after {
@@ -88,7 +83,51 @@
     border-bottom: 1px solid var(--light-text-color);
   }
 
-  /* Skater Images Gallery */
+  .board-design-flag::after {
+    content: "BOARD DESIGN";
+    color: var(--white);
+    height: 50px;
+    width: 100%;
+    background: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    font-size: 1.3rem;
+    border-top: 1px solid var(--light-text-color);
+    border-bottom: 1px solid var(--light-text-color);
+  }
+
+  .contact-us-flag::after {
+    content: "CONTACT US";
+    color: var(--white);
+    height: 50px;
+    width: 100%;
+    background: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    font-size: 1.3rem;
+    border-top: 1px solid var(--light-text-color);
+    border-bottom: 1px solid var(--light-text-color);
+  }
+
+  /* Articles */
+
+  section.articles {
+    grid-template-columns: 1fr;
+  }
+
+  section.articles {
+    margin-top: 30px;
+  }
+
+  .articles .info {
+    height: 250px;
+  }
+
+  /* Skaters Gallery */
 
   .gallery {
     grid-template-areas:
@@ -104,21 +143,6 @@
   }
 
   /* Skateboards */
-
-  .board-design-flag::after {
-    content: "BOARD DESIGN";
-    color: var(--white);
-    height: 50px;
-    width: 100%;
-    background: var(--primary-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    font-size: 1.3rem;
-    border-top: 1px solid var(--light-text-color);
-    border-bottom: 1px solid var(--light-text-color);
-  }
 
   #skateboards {
     display: grid;
@@ -136,19 +160,25 @@
     justify-content: space-evenly;
   }
 
-  .contact-us-flag::after {
-    content: "CONTACT US";
-    color: var(--white);
+  #contact .contact-info .footer-social ul li {
     height: 50px;
-    width: 100%;
-    background: var(--primary-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    font-size: 1.3rem;
-    border-top: 1px solid var(--light-text-color);
-    border-bottom: 1px solid var(--light-text-color);
+    width: 50px;
+  }
+
+  .contact-info .footer-social ul li:first-child {
+    background: rgb(71, 89, 147);
+  }
+
+  .contact-info .footer-social ul li:nth-child(2) {
+    background: rgb(196, 145, 69);
+  }
+
+  .contact-info .footer-social ul li:nth-child(3) {
+    background: rgb(112, 142, 192);
+  }
+
+  .contact-info .footer-social ul li:last-child {
+    background: rgb(165, 65, 52);
   }
 
   #contact {
